# SqlBasicCpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  compile.py  compile.sh  compile_windows.py  main.cpp
Core/: Core.cpp  Core.hpp
EncodePassword/: EncodePassword.cpp  EncodePassword.hpp
ExternalRessources/mysql/include/: mysql_version.h  mysqld_error.h  mysqlx_ername.h  mysqlx_error.h
ReadInput/: ReadInput.cpp  ReadInput.hpp
SqlWrap/: DatabaseInfos.cpp  DatabaseInfos.hpp  RequestBuilder.cpp  RequestBuilder.hpp  SqlWrap.cpp  SqlWrap.hpp
UnconnectedCmd/: UnconnectedCmd.cpp  UnconnectedCmd.hpp
Users/: User.cpp  User.hpp  UsersInfos.cpp  UsersInfos.hpp
VectorManipulation/: VManipulation.cpp  VManipulation.hpp
